misalignment bug fix

--- a/src/styles/navSidebar/navSidebar.module.scss
+++ b/src/styles/navSidebar/navSidebar.module.scss
@@ -1,9 +1,5 @@
 .navSidebar {
-    position: relative;
-    left: 30px;
-    top: 30px;
     width: 267px;
-
     text-align: right;
 }
 
@@ -12,8 +8,10 @@
     background-color: #FED351;
     border-radius: 10px;
     margin-bottom: 5px;
-    width: 267px;
-    height: 80px;
+    width: 100%;
+    max-width: 267px;
+    height: 100%;
+    max-height: 80px;
 
     align-items: center;
     justify-content: center;
